--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": "^7.0"
     },
-    "license": "OMNI CORP",
+    "license": "OCORP",
     "authors": [
         {
             "name": "abhijeet",
